kubernetes/cluster-config/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
    - name: grafana-port
      port: 3000
      protocol: TCP
  selector:
    app: grafana
