kubernetes/cluster-config/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    stable.k8s.psg.io/kcm.provider: "googlecloud"
    stable.k8s.psg.io/kcm.email: "tev.jeffrey@gmail.com"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - hosts:
      - grafana.staging.coursetrakr.io
      secretName: grafana-tls
  rules:
  - host: grafana.staging.coursetrakr.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: grafana
          servicePort: grafana-port
